# src/api/contracts/openapi.yaml
@@ -2564,6 +2564,16 @@ components:
         score_count:
           type: integer
           nullable: true
+        cast:
+          type: array
+          items:
+            type: object
+            additionalProperties: {}
+        crew:
+          type: array
+          items:
+            type: object
+            additionalProperties: {}
         details:
           $ref: '#/components/schemas/EpisodeDetails'
         related:
@@ -2589,8 +2599,10 @@ components:
             type: object
             additionalProperties: {}
       required:
+      - cast
       - consumptions
       - consumptions_number
+      - crew
       - details
       - genres
       - id
@@ -2650,6 +2662,16 @@ components:
         score_count:
           type: integer
           nullable: true
+        cast:
+          type: array
+          items:
+            type: object
+            additionalProperties: {}
+        crew:
+          type: array
+          items:
+            type: object
+            additionalProperties: {}
         details:
           type: object
           additionalProperties: {}
@@ -2676,8 +2698,10 @@ components:
             type: object
             additionalProperties: {}
       required:
+      - cast
       - consumptions
       - consumptions_number
+      - crew
       - details
       - genres
       - id
